force-app/main/default/objects/TriggerSetting__mdt/fields/DocumentAlyanteAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>DocumentAlyanteAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocumentAlyanteAfterInsert</label>
    <type>Checkbox</type>
</CustomField>