force-app/main/default/objects/TriggerSetting__mdt/fields/DocumentAlyanteAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>DocumentAlyanteAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocumentAlyanteAfterUpdate</label>
    <type>Checkbox</type>
</CustomField>