force-app/main/default/objects/TriggerSetting__mdt/fields/DocumentAlyanteBeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>DocumentAlyanteBeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocumentAlyanteBeforeDelete</label>
    <type>Checkbox</type>
</CustomField>