force-app/main/default/objects/TriggerSetting__mdt/fields/DocumentAlyanteBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>DocumentAlyanteBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocumentAlyanteBeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>