force-app/main/default/objects/TriggerSetting__mdt/fields/DocumentDetailAlyanteBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>DocumentDetailAlyanteBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocumentDetailAlyanteBeforeInsert</label>
    <type>Checkbox</type>
</CustomField>