force-app/main/default/objects/TriggerSetting__mdt/fields/OpportunityAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity After Insert</label>
    <type>Checkbox</type>
</CustomField>