force-app/main/default/objects/TriggerSetting__mdt/fields/OpportunityBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>OpportunityBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Before Insert</label>
    <type>Checkbox</type>
</CustomField>