force-app/main/default/objects/TriggerSetting__mdt/fields/OrderBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>OrderBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OrderBeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>