force-app/main/default/objects/TriggerSetting__mdt/fields/ProjectStatusAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProjectStatus After Insert</label>
    <type>Checkbox</type>
</CustomField>