force-app/main/default/objects/TriggerSetting__mdt/fields/ProjectStatusAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProjectStatus After Update</label>
    <type>Checkbox</type>
</CustomField>