force-app/main/default/objects/TriggerSetting__mdt/fields/ProjectStatusBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProjectStatus Before Insert</label>
    <type>Checkbox</type>
</CustomField>