force-app/main/default/objects/TriggerSetting__mdt/fields/ProjectStatusBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatusBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProjectStatus Before Update</label>
    <type>Checkbox</type>
</CustomField>