force-app/main/default/objects/TriggerSetting__mdt/fields/QuoteAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>QuoteAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote After Insert</label>
    <type>Checkbox</type>
</CustomField>