force-app/main/default/objects/TriggerSetting__mdt/fields/QuoteAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>QuoteAfterUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>QuoteAfterUpdate</label>
    <type>Checkbox</type>
</CustomField>