force-app/main/default/objects/TriggerSetting__mdt/fields/QuoteBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>QuoteBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuoteBeforeInsert</label>
    <type>Checkbox</type>
</CustomField>