force-app/main/default/objects/TriggerSetting__mdt/fields/QuoteBeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>QuoteBeforeUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuoteBeforeUpdate</label>
    <type>Checkbox</type>
</CustomField>