force-app/main/default/objects/TriggerSetting__mdt/fields/QuoteLineItemAfterDelete__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItemAfterDelete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Quote Line Item After Delete</label>
    <type>Checkbox</type>
</CustomField>