force-app/main/default/objects/TriggerSetting__mdt/fields/QuoteLineItemAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItemAfterInsert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Quote Line Item After Insert</label>
    <type>Checkbox</type>
</CustomField>