force-app/main/default/objects/TriggerSetting__mdt/fields/QuoteLineItemAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItemAfterUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Quote Line Item After Update</label>
    <type>Checkbox</type>
</CustomField>